Local view Bug #58325

Closed
opened 2018-11-30 16:08:18 +01:00 by SABRI Salim · 30 comments

System Information
Operating system: Linux Deepin 15.8
Graphics card: NVIDIA Duke 1080ti

Blender Version

                              blender-2.80-7ec5a68091a-linux-glibc224-x86_64

Exact steps for others to reproduce the error

Open New file.
Select The Box.
Change to Edit mode.
"/" for local view.
Change to Object mode
Bug
The box disappear and when click the Box appear

**System Information** Operating system: Linux Deepin 15.8 Graphics card: NVIDIA Duke 1080ti **Blender Version** ``` blender-2.80-7ec5a68091a-linux-glibc224-x86_64 ``` **Exact steps for others to reproduce the error** Open New file. Select The Box. Change to Edit mode. "/" for local view. Change to Object mode Bug The box disappear and when click the Box appear
Author

Added subscriber: @Dalkoom

Added subscriber: @Dalkoom

#58883 was marked as duplicate of this issue

#58883 was marked as duplicate of this issue

#58848 was marked as duplicate of this issue

#58848 was marked as duplicate of this issue

#58849 was marked as duplicate of this issue

#58849 was marked as duplicate of this issue

#58810 was marked as duplicate of this issue

#58810 was marked as duplicate of this issue

#58673 was marked as duplicate of this issue

#58673 was marked as duplicate of this issue

#58446 was marked as duplicate of this issue

#58446 was marked as duplicate of this issue

#58619 was marked as duplicate of this issue

#58619 was marked as duplicate of this issue

#58494 was marked as duplicate of this issue

#58494 was marked as duplicate of this issue

#58349 was marked as duplicate of this issue

#58349 was marked as duplicate of this issue

#58352 was marked as duplicate of this issue

#58352 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can reproduce the issue.

Can reproduce the issue.
Member

Added subscribers: @aleksandrnovakovcg, @Larry3d

Added subscribers: @aleksandrnovakovcg, @Larry3d
Member

Added subscriber: @TessaStander

Added subscriber: @TessaStander
Member

Added subscriber: @BenoitAlexis

Added subscriber: @BenoitAlexis
Member
Added subscribers: @PranavjitVirdi, @lichtwerk, @FelipeRiosGomez
Member

Added subscriber: @machinecommune

Added subscriber: @machinecommune

Added subscriber: @FeralMan

Added subscriber: @FeralMan
Dalai Felinto was assigned by Brecht Van Lommel 2018-12-05 18:54:16 +01:00

Added subscribers: @ZedDB, @ideasman42

Added subscribers: @ZedDB, @ideasman42

Added subscriber: @ameenvengara

Added subscriber: @ameenvengara

I will look into this. It is strange because I'm almost sure I tested this on the original commit.

I will look into this. It is strange because I'm almost sure I tested this on the original commit.

Added subscriber: @GeorgesDahdouh

Added subscriber: @GeorgesDahdouh

This issue was referenced by 3cce7b7ab9

This issue was referenced by 3cce7b7ab922392ce50037f5f3efefa8784f03b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto was unassigned by SABRI Salim 2018-12-08 08:10:19 +01:00
SABRI Salim self-assigned this 2018-12-08 08:10:19 +01:00
Author

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

The Bug still there even with the last build "d40bffa17f6"

The Bug still there even with the last build "d40bffa17f6"
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Solved in "0fe5a789837" Build

Solved in "0fe5a789837" Build
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58325
No description provided.