source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc
@@ -812,6 +812,7 @@ static void deg_update_copy_on_write_animation(const Depsgraph *depsgraph,
 typedef struct ObjectRuntimeBackup {
 	Object_Runtime runtime;
 	short base_flag;
+	unsigned short base_local_view_bits;
 } ObjectRuntimeBackup;
 
 /* Make a backup of object's evaluation runtime data, additionally
@@ -835,6 +836,7 @@ static void deg_backup_object_runtime(
 	}
 	/* Make a backup of base flags. */
 	object_runtime_backup->base_flag = object->base_flag;
+	object_runtime_backup->base_local_view_bits = object->base_local_view_bits;
 }
 
 static void deg_restore_object_runtime(
@@ -872,6 +874,7 @@ static void deg_restore_object_runtime(
 		}
 	}
 	object->base_flag = object_runtime_backup->base_flag;
+	object->base_local_view_bits = object_runtime_backup->base_local_view_bits;
 }
 
 ID *deg_update_copy_on_write_datablock(const Depsgraph *depsgraph,
